[gd_scene load_steps=9 format=3 uid="uid://drc36dih67rvm"]

[ext_resource type="Script" uid="uid://bedsursfqh5k0" path="res://scripts/main_menu.gd" id="1_853f1"]
[ext_resource type="FontFile" uid="uid://1v3itk0hkdou" path="res://Assets/Text/04B_30__.TTF" id="2_8saeu"]
[ext_resource type="PackedScene" uid="uid://cgew1lnr8gvgb" path="res://Scenes/OptionsMenu.tscn" id="3_8saeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28flt"]
bg_color = Color(0.0169219, 0.0604374, 0.188907, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(7.02709e-06, 0.546868, 0.762121, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(1.97336e-06, 0.296936, 0.422803, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(4.18738e-06, 0.397837, 0.55979, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_28flt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_853f1")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28flt")

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -351.0
offset_top = 79.0
offset_right = 351.0
offset_bottom = 149.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8saeu")
theme_override_font_sizes/font_size = 69
text = "Karaoke Game"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -111.0
offset_right = 175.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="UI/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
text = "Play"

[node name="LeaderboardButton" type="Button" parent="UI/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
text = "Leaderboard"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="OptionsButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
text = "Options"

[node name="ExitButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
text = "Exit"

[node name="OptionsMenu" parent="UI" instance=ExtResource("3_8saeu")]
visible = false
layout_mode = 1
offset_left = 18.0
offset_top = -14.0
offset_right = 64.0
offset_bottom = -18.0

[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer2/PlayButton" to="." method="_on_playbtn_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer2/LeaderboardButton" to="." method="_on_leaderboardsbtn_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_optionsbtn_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exitbtn_pressed"]
